--- a/style.css
+++ b/style.css
@@ -40,3 +40,13 @@
     border: 2px solid #000000;
     border-radius:100%
 }
+
+footer{
+    background-color: #333;
+    color:white;
+}
+
+.img_footer{
+    height: 30px;
+    width: 30px;
+}
