--- a/style.css
+++ b/style.css
@@ -3,152 +3,155 @@
     src: url('font_family/Sen-Regular.ttf') format('truetype');
 }
 
-@font-face {
-    font-family: 'Sen-bold';
-    src: url('font_family/Sen-Bold.ttf') format('truetype');
-}
-
-@font-face {
-    font-family: 'Sen-extra-bold';
-    src: url('font_family/Sen-ExtraBold.ttf') format('truetype');
-}
-
-*{
-    margin:0;
-    padding:0;
-    font-family: 'Sen-regular','sans-serif';
-}
-
-.grey{
-    background-color: #eee;
-}
-
-.Line{
-    width: 75px;
-    height: 0px;
-    opacity: 0.74;
-    border: 2px solid #000000;
-    transform: rotate(-180deg);
-}
-
-.Chronological_ellipse{
+* {
+    margin: 0;
+    padding: 0;
     box-sizing: border-box;
-    position: absolute;
-    width: 20px;
-    height: 20px;
-    background: #FFFFFF;
-    border: 2px solid #000000;
-    border-radius:100%
 }
 
-footer{
-    background-color: #333;
-    color:white;
+body {
+    font-family: 'Sen-regular', 'sans-serif';
 }
 
-.img_footer{
-    height: 30px;
-    width: 30px;
-}
+header {
+    height: 75px;
+    background-color: cornflowerblue;
 
-#who_i_am{
-    background-color: #D0D0D0;
-}
-
-h1{
-    position: absolute;
-    left: 39.74%;
-    right: 39.79%;
-    top: 3.08%;
-    bottom: 96.59%;
-
-    font-style: normal;
-    font-weight: 400;
-    font-size: 48px;
-    line-height: 58px;
-    /* leading-trim and text-edge are draft CSS properties.
-    
-    Read more: https://drafts.csswg.org/css-inline-3/#leading-trim
-    */
-    leading-trim: both;
-    text-edge: cap;
-    
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    font-size: 24px;
     color: #FFFFFF;
+
+    padding: 0 32px;
+
+    @media (max-width: 600px) {
+        padding: 0 16px;
+    }
 }
 
-h2{
-    font-size: 48px;
-    font-style: normal;
-    font-weight: 400;
-    font-size: 48px;
-    line-height: 58px;
+.container-img {
+    width: 64px;
+    height: 64px;
+
+    border-radius: 100px;
+    overflow: hidden;
 }
 
-h3{
-    font-style: normal;
-    font-weight: 400;
+.img-lucas {
+    border-radius: 100px;
+    width: 48px;
+    height: 48px;
+
+    object-position: 50%;
+    object-fit: contain;
+
+    @media (max-width: 600px) {
+        display: none;
+    }
+}
+
+.container-link {
+    display: flex;
+    gap: 8px;
+}
+
+.container-link a {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.container-link a ion-icon {
+    fill: #FFFFFF;
     font-size: 32px;
-    line-height: 38px;
-    text-decoration-line: underline;
-
-    color: #000080;
 }
 
-h4{
-    font-style: normal;
-    font-weight: 400;
-    font-size: 24px;
-    line-height: 29px;
+.container {
+    padding: 4rem;
 
-    color: #629E4D;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 32px;
+
+    @media (max-width: 1200px) {
+        grid-template-columns: repeat(3, 1fr);
+    }
+
+    @media (max-width: 800px) {
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+    @media (max-width: 600px) {
+        grid-template-columns: repeat(1, 1fr);
+    }
 }
 
-h5{
-    font-style: normal;
-    font-weight: 400;
+.card {
+    border-radius: 8px;
+    padding: 12px;
+
+    display: flex;
+    flex-direction: column;
+
+    box-shadow: 0 8px 12px rgba(0, 0, 0, 0.2);
+    transition: all 0.2s;
+}
+
+.card:hover {
+    box-shadow: 0 8px 12px rgba(0, 0, 0, 0.1);
+}
+
+.card--body__title {
+    text-align: center;
+    margin-bottom: 12px;
+}
+
+.card--body__description {
+    margin-bottom: 12px;
+}
+
+.card--body__container {
+    display: flex;
+    gap: 8px;
+}
+
+.card--body__btn {
     font-size: 16px;
-    line-height: 19px;
+    width: 100%;
+    padding: 8px 0;
+    border: none;
+    color: #fff;
+    background-color: cornflowerblue;
+    border-radius: 100px;
+    cursor: pointer;
+    transition: all 0.2s;
 
-    color: #FF0000;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 8px;
+
+    margin-top: 16px;
 }
 
-.formation_img{
-    width:200px;
-    height:auto;
-}
-
-.competences_img{
-    width: 25px;
-}
-
-.txt_competences{
-    font-style: normal;
-    font-weight: 700;
+.link-outline {
+    fill: #FFFFFF;
     font-size: 24px;
-    line-height: 29px;
 }
 
-progress{
-    -webkit-appearance: none;
-    appearance: none;
-
-    width: 413px;
-    height: 10px;
+.card--body__btn.github {
+    background-color: #111;
 }
 
-progress::-webkit-progress-bar{
-    border-radius:50px;
-    background-color: lightgray;
+.icon-github {
+    font-size: 24px;
 }
 
-progress::-webkit-progress-value{
-    border-radius:50px;
+.card--body__btn:hover {
+    filter: brightness(0.9);
 }
 
-.competences{
-    background-color: #FFFFFF;
-    width: 600px;
-    height: 50px;
-    box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.25);
-    border-radius: 5px;
+.img-fluid {
+    width: 100%;
 }
