--- a/style.css
+++ b/style.css
@@ -60,6 +60,8 @@ header {
     display: flex;
     align-items: center;
     justify-content: center;
+
+    text-decoration: none;
 }
 
 .container-link a ion-icon {
@@ -102,6 +104,10 @@ header {
     box-shadow: 0 8px 12px rgba(0, 0, 0, 0.1);
 }
 
+.card--entete {
+    margin-bottom: 8px;
+}
+
 .card--body__title {
     text-align: center;
     margin-bottom: 12px;
@@ -133,6 +139,8 @@ header {
     gap: 8px;
 
     margin-top: 16px;
+
+    text-decoration: none;
 }
 
 .link-outline {
