--- a/style.css
+++ b/style.css
@@ -80,11 +80,11 @@ header {
         grid-template-columns: repeat(3, 1fr);
     }
 
-    @media (max-width: 800px) {
+    @media (max-width: 1024px) {
         grid-template-columns: repeat(2, 1fr);
     }
 
-    @media (max-width: 600px) {
+    @media (max-width: 750px) {
         grid-template-columns: repeat(1, 1fr);
     }
 }
@@ -106,6 +106,19 @@ header {
 
 .card--entete {
     margin-bottom: 8px;
+}
+
+.card--body {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+
+    height: 100%;
+}
+
+.card--body__entete {
+    display: flex;
+    flex-direction: column;
 }
 
 .card--body__title {
@@ -137,8 +150,6 @@ header {
     align-items: center;
     justify-content: center;
     gap: 8px;
-
-    margin-top: 16px;
 
     text-decoration: none;
 }
